fix missing registration + api conflict

--- a/dev/backend/Infra/Sporty.Infra.WebApi/Sporty.Infra.WebApi.csproj
+++ b/dev/backend/Infra/Sporty.Infra.WebApi/Sporty.Infra.WebApi.csproj
@@ -24,13 +24,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Infrastructure\HealthChecks\Ux\branding.css">
+    <None Update="HealthChecks\Ux\branding.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Infrastructure\Handlers\" />
   </ItemGroup>
 
 </Project>
