--- a/dev/backend/Services/Sporty.Services.Groups/Sporty.Services.Groups.csproj
+++ b/dev/backend/Services/Sporty.Services.Groups/Sporty.Services.Groups.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="AspNetCore.HealthChecks.UI" Version="3.0.11" />
     <PackageReference Include="AspNetCore.HealthChecks.Uris" Version="3.0.0" />
     <PackageReference Include="AspNetCoreRateLimit" Version="3.0.5" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="AutoWrapper.Core" Version="4.0.1" />
     <PackageReference Include="AutoWrapper.Server" Version="2.0.0" />
